--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,20 +1,26 @@
+.parraf{
+    padding: 1px 20px;
+    background-color: #FFF6DC;
+    border: 3px solid #765827;
+}
+
 h1{
  font-family: monospace;
  font-size: 5em;
  color: #12486B;
  text-align: center;
-
 }
 
 h2{
     font-family: sans-serif;
-    color: chocolate;
-      
+    color: #9ED2BE;
+    font-size: 2.5em;
 }
 
 h3{
     font-family: sans-serif;
     color: #419197;
+    font-size: 1.5em;
 }
 
 #u-list{
@@ -33,7 +39,6 @@ a{
 
 p{
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 a:hover{
@@ -42,7 +47,7 @@ a:hover{
 }
 
 body{
-background-image: url(Fondo.jpg);
+background-image: url(Fondo1.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
