--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -4,23 +4,38 @@
     border: 3px solid #765827;
 }
 
+@font-face {
+    font-family: cursiva;
+    src: url(fuentes/Indoor\ Design.otf);
+}
+
+@font-face {
+    font-family: type;
+    src: url(fuentes/typewcond_regular.otf);
+}
+
+@font-face {
+    font-family: louis;
+    src: url(fuentes/Louis\ George\ Cafe.ttf);
+}
+
 h1{
- font-family: monospace;
- font-size: 5em;
+ font-family: cursiva;
+ font-size: 6em;
  color: #12486B;
  text-align: center;
 }
 
 h2{
-    font-family: sans-serif;
-    color: #9ED2BE;
-    font-size: 2.5em;
+    font-family: type;
+    color: #321E1E;
+    font-size: 3em;
 }
 
 h3{
-    font-family: sans-serif;
+    font-family: type;
     color: #419197;
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 #u-list{
@@ -38,7 +53,7 @@ a{
 } 
 
 p{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: louis;
 }
 
 a:hover{
@@ -48,7 +63,10 @@ a:hover{
 }
 
 body{
-background-image: url(Fondo1.jpg);
-background-repeat: no-repeat;
-background-size: cover;
+
+    background-image: url(Fondo1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: copy;
 }
+
